Se completa el contenido de la página de proyectos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     <img src="/images/projects/dotnet-core.png" alt="logo dotnet">
                     <p>Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con Razor Pages,
                         Entity Framework y MySQL.</p>
-                    <a href="/pages/project-details/system-project-task.html" class="rellenito color2">Más información</a>
+                    <a href="/pages/project-details/system-project-task.html" class="rellenito color2">Más
+                        información</a>
                 </article>
 
                 <article class="project">
@@ -72,21 +73,21 @@
                     <img src="/images/projects/javase.png" alt="logo javase">
                     <p>Aplicación de escritorio que cumple la función de directorio personal, está realizada en Java 8 y
                         utiliza una base de datos MySQL.</p>
-                    <a href="#" class="rellenito color2">Más información</a>
+                    <a href="/pages/project-details/mi-directorio.html" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
                     <h3>Sistema de Gestión de Tareas</h3>
                     <img src="/images/projects/dotnet.svg" alt="logo dotnet">
                     <p>Aplicación de consola que permite gestionar tareas cotidianas. Elaborada con C# sobre .NET 7.</p>
-                    <a href="#" class="rellenito color2">Más información</a>
+                    <a href="/pages/project-details/sistema-gt.html" class="rellenito color2">Más información</a>
                 </article>
 
                 <article class="project">
-                    <h3>CRUD - JavaServer Pages</h3>
+                    <h3>PilotTest - CRUD - JavaServer Pages</h3>
                     <img src="/images/projects/jsp.webp" alt="logo dotnet">
                     <p>Aplicación web CRUD realizada con Java EE 8 y las tecnologías de los Servlets y JSPs.</p>
-                    <a href="#" class="rellenito color2">Más información</a>
+                    <a href="/pages/project-details/pilot-test.html" class="rellenito color2">Más información</a>
                 </article>
             </div>
             <a href="/pages/projects.html"
