--- a/pages/project-details/crudIn-console.html
+++ b/pages/project-details/crudIn-console.html
@@ -40,25 +40,43 @@
         <h2>Título</h2>
         <h3>¿Qué es?</h3>
         <p>
-            ...
+            Esta solución es un simple CRUD en consola, está elaborado con c# en .Net 7, y se conecta a una base de
+            datos Microsoft SQL Server.
         </p>
         <h3>Tecnologías utilizadas:</h3>
         <ul>
-            <li>...</li>
-            <li>...</li>
-            <li>...</li>
+            <li>.Net 7</li>
+            <li>SQL Server</li>
         </ul>
         <h3>Funcionamiento:</h3>
         <p>
-            ...
+            Para desplegar esta aplicación deberá realizar lo siguiente:
         </p>
+        <ul>
+            <li>Abra el proyecto en su IDE de preferencia, es recomendable usar Visual Studio Code o Visual Studio.
+                El proyecto se encuentra en el directorio “CrudInConsole” ubicado en el directorio raíz de este
+                repositorio.
+            </li>
+            <li>
+                Importe la base de datos SQL Server en su equipo. El script “PilotTestDB.sql” se encuentra ubicado
+                en el directorio raíz del repositorio, úselo para realizar dicho proceso.
+            </li>
+            <li>
+                En el archivo “Conexion.cs” modifique los valores de “ID” y “Password” conforme a las credenciales
+                de su motor de base de datos SQL Server
+            </li>
+        </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="#" target="_blank">#</a>
+            <a href="https://github.com/narto12345/CrudInConsole?tab=readme-ov-file"
+                target="_blank">https://github.com/narto12345/CrudInConsole?tab=readme-ov-file</a>
         </p>
         <h3>Ilustraciones:</h3>
         <div class="ilustraciones">
-            <img src="#" alt="img">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_2.png?raw=true" alt="img-crud-cons-1">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_1.png?raw=true" alt="img-crud-cons-1">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_3.png?raw=true" alt="img-crud-cons-1">
+            <img src="https://github.com/narto12345/CrudInConsole/blob/main/image_4.png?raw=true" alt="img-crud-cons-1">
         </div>
     </main>
     <footer class="color4">
