--- a/pages/projects.html
+++ b/pages/projects.html
@@ -56,7 +56,7 @@
                 <p class="rellenito">Aplicación de escritorio que cumple la función de directorio personal, está
                     realizada en Java 8 y
                     utiliza una base de datos MySQL.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/mi-directorio.html" class="rellenito d-block">Ver detalle</a>
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
@@ -65,7 +65,7 @@
                 </div>
                 <p class="rellenito">Aplicación CRUD Web API RESTful que se conecta a una base de datos MySQL,
                     implementada con Java EE, JavaScript y alojada en un servidor Glassfish.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/crud-restful.html" class="rellenito d-block">Ver detalle</a>
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
@@ -73,7 +73,7 @@
                     <img class="con-center" src="/images/projects/jsp.webp" alt="logo-jsp">
                 </div>
                 <p class="rellenito">Aplicación CRUD Web elaborada con JavaServer Pages y SQL Server.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/pilot-test.html" class="rellenito d-block">Ver detalle</a>
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
@@ -82,7 +82,7 @@
                 </div>
                 <p class="rellenito">Aplicación de consola que cumple la función de un Sistema de Gestión de Tareas
                     (SistemaGT); está elaborado en C# sobre .Net y persiste la información mediante un archivo .txt.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/sistema-gt.html" class="rellenito d-block">Ver detalle</a>
             </article>
             <article class="project">
                 <div class="encabezado-img rellenito">
@@ -91,7 +91,7 @@
                 </div>
                 <p class="rellenito">Aplicación CRUD en consola; está elaborado con C# en .Net 7, y se conecta a una
                     base de datos Microsoft SQL Server.</p>
-                <a href="#" class="rellenito d-block">Ver detalle</a>
+                <a href="/pages/project-details/crudIn-console.html" class="rellenito d-block">Ver detalle</a>
             </article>
         </div>
     </main>
