--- a/pages/project-details/mi-directorio.html
+++ b/pages/project-details/mi-directorio.html
@@ -27,7 +27,7 @@
         <div class="navigation-container">
             <nav class="navigation-main">
                 <a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a>
-                <a href="#">Experiencia <i class="fa-solid fa-briefcase"></i></a>
+                <a href="/pages/experience.html">Experiencia <i class="fa-solid fa-briefcase"></i></a>
                 <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
                 <a href="#">Certificaciones <i class="fa-solid fa-medal"></i></a>
                 <a href="#">Sobre mí <i class="fa-solid fa-person"></i></a>
