--- a/pages/project-details/sistema-gt.html
+++ b/pages/project-details/sistema-gt.html
@@ -27,7 +27,7 @@
         <div class="navigation-container">
             <nav class="navigation-main">
                 <a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a>
-                <a href="#">Experiencia <i class="fa-solid fa-briefcase"></i></a>
+                <a href="/pages/experience.html">Experiencia <i class="fa-solid fa-briefcase"></i></a>
                 <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
                 <a href="/pages/">Certificaciones <i class="fa-solid fa-medal"></i></a>
                 <a href="#">Sobre mí <i class="fa-solid fa-person"></i></a>
@@ -65,7 +65,8 @@
         </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/SistemaGT" target="_blank">https://github.com/narto12345/SistemaGT</a>
+            <a href="https://github.com/narto12345/SistemaGT"
+                target="_blank">https://github.com/narto12345/SistemaGT</a>
         </p>
         <h3>Ilustraciones:</h3>
         <div class="ilustraciones">
