--- a/pages/project-details/pilot-test.html
+++ b/pages/project-details/pilot-test.html
@@ -30,7 +30,7 @@
                 <a href="/pages/experience.html">Experiencia <i class="fa-solid fa-briefcase"></i></a>
                 <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
                 <a href="/pages/">Certificaciones <i class="fa-solid fa-medal"></i></a>
-                <a href="#">Sobre mí <i class="fa-solid fa-person"></i></a>
+                <a href="/pages/certifications.html">Sobre mí <i class="fa-solid fa-person"></i></a>
                 <a href="#">Contacto <i class="fa-solid fa-phone"></i></a>
             </nav>
         </div>
