--- a/pages/project-details/sistema-gt.html
+++ b/pages/project-details/sistema-gt.html
@@ -29,7 +29,7 @@
                 <a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a>
                 <a href="/pages/experience.html">Experiencia <i class="fa-solid fa-briefcase"></i></a>
                 <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
-                <a href="/pages/">Certificaciones <i class="fa-solid fa-medal"></i></a>
+                <a href="/pages/certifications.html">Certificaciones <i class="fa-solid fa-medal"></i></a>
                 <a href="#">Sobre mí <i class="fa-solid fa-person"></i></a>
                 <a href="#">Contacto <i class="fa-solid fa-phone"></i></a>
             </nav>
