Se crean páginas de 'Acerca de mí' y 'Contacto'

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="shortcut icon" href="/images/favicon-portafolio.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/project-details.css">
+    <link rel="stylesheet" href="/styles/contact.css">
 
     <title>Portafolio - Nicolás Sosa</title>
 </head>
@@ -37,41 +37,7 @@
         <div class="navigation-barra-button color2"></div>
     </header>
     <main id="main" class="container">
-        <h2>SistemaGT</h2>
-        <h3>¿Qué es?</h3>
-        <p>
-            Este proyecto cumple la función de un Sistema de Gestión de Tareas (SistemaGT); está elaborado en C# sobre
-            .Net.
-        </p>
-        <h3>Tecnologías utilizadas:</h3>
-        <ul>
-            <li>.Net 7</li>
-        </ul>
-        <h3>Funcionamiento:</h3>
-        <p>
-            Algunas de sus características:
-        </p>
-        <ul>
-            <li>Aplicación de consola.</li>
-            <li>Patrón de diseño MVC.</li>
-            <li>Persistencia mediante el uso de un archivo de texto (.txt).</li>
-        </ul>
-        <p>La aplicación tiene las siguientes capacidades:</p>
-        <ul>
-            <li>Agregar Tareas</li>
-            <li>Eliminar Tareas</li>
-            <li>Marcar Tareas</li>
-            <li>Listar Tareas</li>
-        </ul>
-        <h3>Código fuente:</h3>
-        <p>
-            <a href="https://github.com/narto12345/SistemaGT"
-                target="_blank">https://github.com/narto12345/SistemaGT</a>
-        </p>
-        <h3>Ilustraciones:</h3>
-        <div class="ilustraciones">
-            <img src="https://github.com/narto12345/SistemaGT/raw/main/image_1.png" alt="img-sgt-1">
-        </div>
+
     </main>
     <footer class="color4">
         <div class="container">
