--- a/pages/project-details/pilot-test.html
+++ b/pages/project-details/pilot-test.html
@@ -29,9 +29,9 @@
                 <a href="/index.html">Inicio <i class="fa-solid fa-house"></i></a>
                 <a href="/pages/experience.html">Experiencia <i class="fa-solid fa-briefcase"></i></a>
                 <a href="/pages/projects.html">Proyectos <i class="fa-solid fa-print"></i></a>
-                <a href="/pages/">Certificaciones <i class="fa-solid fa-medal"></i></a>
-                <a href="/pages/certifications.html">Sobre mí <i class="fa-solid fa-person"></i></a>
-                <a href="#">Contacto <i class="fa-solid fa-phone"></i></a>
+                <a href="/pages/certifications.html">Certificaciones <i class="fa-solid fa-medal"></i></a>
+                <a href="/pages/about-me.html">Sobre mí <i class="fa-solid fa-person"></i></a>
+                <a href="/pages/contact.html">Contacto <i class="fa-solid fa-phone"></i></a>
             </nav>
         </div>
         <div class="navigation-barra-button color2"></div>
