Se finaliza la versión 2 de portafolio

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -37,7 +37,40 @@
         <div class="navigation-barra-button color2"></div>
     </header>
     <main id="main" class="container">
-        
+        <img src="/images/MiAvatar-2.png" class="img-size-200 mg-top-30 centra-bloque d-block" alt="avatarXbox-1">
+        <p>
+            Mucho gusto, me llamo Nicolás Santiago Sosa Jiménez, soy de Colombia y vivo en una ciudad llamada
+            Fusagasugá, ubicada a una hora de Bogotá. Fusagasugá es la ciudad donde nací y he pasado la mayor parte de
+            mi vida. Amo este pueblo por todas las experiencias, logros y lazos que he construido en él.
+        </p>
+        <p>
+            Soy una persona creyente e intento tener una relación cercana con mi creador; aprendo cada día de todas las
+            circunstancias y personas que Él pone en mi camino, aceptando mis errores y no volviéndolos a cometer,
+            sabiendo que cada día tengo algo nuevo que aprender de mis padres, hermanas, familiares y amigos.
+        </p>
+        <p>
+            Tengo diversos gustos y pasatiempos; desde muy pequeño me han apasionado los videojuegos, y ahora que soy
+            mayor sigo disfrutando de todas las experiencias que me brinda este hermoso universo. Por cierto, mi saga
+            favorita es Halo, pero soy muy abierto a probar y disfrutar una gran variedad de géneros como disparos,
+            deportes, estrategia, supervivencia, aventura, multijugador, entre muchos más.
+        </p>
+        <div class="img-container">
+            <img src="https://i.pinimg.com/736x/81/7d/51/817d51db7148de914d4999401d4a161c.jpg"
+                class="img-size-200 mg-top-30 centra-bloque d-block" alt="halo-jefe">
+            <img src="https://images.vexels.com/content/203272/preview/male-cyclist-stroke-6ea54a.png"
+                class="img-size-200 mg-top-30 centra-bloque d-block" alt="ciclismo">
+        </div>
+        <p>
+            En general, me gusta mucho el deporte. El fútbol y el ciclismo son mis favoritos; me encanta tanto verlos
+            como practicarlos. Soy hincha del América de Cali, el equipo de la ciudad de donde es mi mamá. No me pierdo
+            ningún partido y los apoyo en los triunfos y derrotas. Por otro lado, el ciclismo también me emociona;
+            siempre trato de estar enterado de las carreras importantes del mundo y salgo con mis amigos a montar cada
+            vez que podemos.
+        </p>
+        <p>
+            Estas son algunas cosas personales acerca de mí. Muchas gracias por dedicar el tiempo para leerlo.
+        </p>
+        <img src="/images/MiAvatar-3.png" class="img-size-200 centra-bloque d-block mg-botton-30" alt="avatarXbox-1">
     </main>
     <footer class="color4">
         <div class="container">
