--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,21 @@
         <div class="navigation-barra-button color2"></div>
     </header>
     <main id="main" class="container">
-
+        <h3>Contacto:</h3>
+        <ul>
+            <li>
+                <span class="negrita">Teléfono:</span> (+57) 311 568 8005
+            </li>
+            <li>
+                <span class="negrita">Correo electrónico:</span> <a
+                    href="mailto:nicosan12@hotmail.com">nicosan12@hotmail.com</a>
+            </li>
+            <li>
+                <span class="negrita">LinkedIn:</span> <a
+                    href="https://www.linkedin.com/in/nicolas-santiago-sosa-jimenez-463259221?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BLutdjJimRPCbj%2BHIW7mL5w%3D%3D"
+                    target="_blank">www.linkedin.com/in/nicolas-santiago-sosa-jimenez</a>
+            </li>
+        </ul>
     </main>
     <footer class="color4">
         <div class="container">
