--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="projects-container">
                 <article class="project">
                     <h3>System Project Task</h3>
-                    <img src="/images/projects/dotnet-core.png" alt="logo dotnet">
+                    <img src="/images/projects/que-es-aspnet-core.jpg" alt="logo dotnet" class="img-round">
                     <p>Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con Razor Pages,
                         Entity Framework y MySQL.</p>
                     <a href="/pages/project-details/system-project-task.html" class="rellenito color2">Más
