--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,7 +41,7 @@
             <article class="project">
                 <div class="encabezado-img rellenito">
                     <h2>System Project Task</h2>
-                    <img class="con-center" src="/images/projects/dotnet-core.png" alt="logo-dotnet">
+                    <img class="con-center img-round" src="/images/projects/que-es-aspnet-core.jpg" alt="logo-dotnet">
                 </div>
                 <p class="rellenito">Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con
                     Razor Pages, Entity
