--- a/pages/experience.html
+++ b/pages/experience.html
@@ -91,7 +91,7 @@
         </div>
     </main>
     <footer class="color4">
-        <div class="container">
+        <div class="container texto-centrado">
             <p>© 2024 BitsTeam. Todos los derechos reservados.</p>
             <p>Contácto <a href="mailto:nicosan12@hotmail.com">nicosan12@hotmail.com</a></p>
         </div>
