add project GifsApp

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             <h2>Proyectos Desctacados</h2>
             <div class="projects-container">
                 <article class="project">
+                    <h3>GifsApp</h3>
+                    <img src="/images/projects/angular-icon.png" alt="logo-angular">
+                    <p>Esta es una aplicación web realizada en Angular que consume un API de gifs; permitiendo mejorar
+                        considerablemente la usabilidad del servicio.</p>
+                    <a href="/pages/project-details/gifs-app.html" class="rellenito color2">Más información</a>
+                </article>
+
+                <article class="project">
                     <h3>System Project Task</h3>
                     <img src="/images/projects/que-es-aspnet-core.jpg" alt="logo dotnet" class="img-round">
                     <p>Sistema de gestión de proyectos, tareas y usuarios participantes. Elaborado con Razor Pages,
@@ -83,12 +91,6 @@
                     <a href="/pages/project-details/sistema-gt.html" class="rellenito color2">Más información</a>
                 </article>
 
-                <article class="project">
-                    <h3>PilotTest - CRUD - JavaServer Pages</h3>
-                    <img src="/images/projects/jsp.webp" alt="logo dotnet">
-                    <p>Aplicación web CRUD realizada con Java EE 8 y las tecnologías de los Servlets y JSPs.</p>
-                    <a href="/pages/project-details/pilot-test.html" class="rellenito color2">Más información</a>
-                </article>
             </div>
             <a href="/pages/projects.html"
                 class="d-block color2 rellenito hover-fondo_azul bordes-negro resp-mar-top box-peque con-center bordes-rendondos">Ver
