--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,6 +40,15 @@
         <div class="projects-container">
             <article class="project">
                 <div class="encabezado-img rellenito">
+                    <h2>GifsApp</h2>
+                    <img class="con-center img-round" src="/images/projects/angular-icon.png" alt="logo-angular">
+                </div>
+                <p class="rellenito">Esta es una aplicación web realizada en Angular que consume un API de gifs;
+                    permitiendo mejorar considerablemente la usabilidad del servicio.</p>
+                <a href="/pages/project-details/gifs-app.html" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
                     <h2>System Project Task</h2>
                     <img class="con-center img-round" src="/images/projects/que-es-aspnet-core.jpg" alt="logo-dotnet">
                 </div>
