Node-API-JWT project added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
             <h2>Proyectos Desctacados</h2>
             <div class="projects-container">
                 <article class="project">
+                    <h3>NodeJS - API Rest - JWT</h3>
+                    <img src="/images/projects/nodeJS.png" alt="logo nodeJS">
+                    <p>
+                        Aplicación back-end que permite registrarse como usuario, iniciar sesión, consultar un recurso
+                        protegido y
+                        cerrar sesión.
+                    </p>
+                    <a href="/pages/project-details/node-api-jwt.html" class="rellenito color2">Más información</a>
+                </article>
+
+                <article class="project">
                     <h3>GifsApp</h3>
                     <img src="/images/projects/angular-icon.png" alt="logo-angular">
                     <p>Esta es una aplicación web realizada en Angular que consume un API de gifs; permitiendo mejorar
@@ -82,13 +93,6 @@
                     <p>Aplicación de escritorio que cumple la función de directorio personal, está realizada en Java 8 y
                         utiliza una base de datos MySQL.</p>
                     <a href="/pages/project-details/mi-directorio.html" class="rellenito color2">Más información</a>
-                </article>
-
-                <article class="project">
-                    <h3>Sistema de Gestión de Tareas</h3>
-                    <img src="/images/projects/dotnet.svg" alt="logo dotnet">
-                    <p>Aplicación de consola que permite gestionar tareas cotidianas. Elaborada con C# sobre .NET 7.</p>
-                    <a href="/pages/project-details/sistema-gt.html" class="rellenito color2">Más información</a>
                 </article>
 
             </div>
