--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,6 +40,19 @@
         <div class="projects-container">
             <article class="project">
                 <div class="encabezado-img rellenito">
+                    <h2>NodeJS - API Rest - JWT</h2>
+                    <img class="con-center img-round" src="/images/projects/nodeJS.png" alt="logo-nodeJS">
+                </div>
+                <p class="rellenito">
+                    Aplicación back-end que permite registrarse como usuario, iniciar sesión, consultar
+                    un recurso
+                    protegido y
+                    cerrar sesión.
+                </p>
+                <a href="/pages/project-details/node-api-jwt.html" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
                     <h2>GifsApp</h2>
                     <img class="con-center img-round" src="/images/projects/angular-icon.png" alt="logo-angular">
                 </div>
