Video added to NodeJS JWT project

--- a/pages/project-details/node-api-jwt.html
+++ b/pages/project-details/node-api-jwt.html
@@ -71,7 +71,8 @@
         </p>
         <h3>Ilustraciones:</h3>
         <div class="ilustraciones">
-            <img src="#" alt="img">
+            <iframe title="video demostrativo" src="https://www.youtube.com/embed/BDltFtSDVvM?si=l2ICGZ4G0-bjy2gu">
+            </iframe>
         </div>
     </main>
     <footer class="color4">
