CountryApp is added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
             <h2>Proyectos Desctacados</h2>
             <div class="projects-container">
                 <article class="project">
+                    <h3>CountryApp</h3>
+                    <img src="/images/projects/angular-icon.png" alt="logo angular">
+                    <p>
+                        Esta es una aplicación web elaborada en Angular 17 que permite consultar países y visualizar sus
+                        detalles.
+                    </p>
+                    <a href="/pages/project-details/country-app.html" class="rellenito color2">Más información</a>
+                </article>
+
+                <article class="project">
                     <h3>NodeJS - API Rest - JWT</h3>
                     <img src="/images/projects/nodeJS.png" alt="logo nodeJS">
                     <p>
@@ -85,14 +95,6 @@
                         Entity Framework y MySQL.</p>
                     <a href="/pages/project-details/system-project-task.html" class="rellenito color2">Más
                         información</a>
-                </article>
-
-                <article class="project">
-                    <h3>Mi Directorio</h3>
-                    <img src="/images/projects/javase.png" alt="logo javase">
-                    <p>Aplicación de escritorio que cumple la función de directorio personal, está realizada en Java 8 y
-                        utiliza una base de datos MySQL.</p>
-                    <a href="/pages/project-details/mi-directorio.html" class="rellenito color2">Más información</a>
                 </article>
 
             </div>
