--- a/pages/project-details/crud-restful.html
+++ b/pages/project-details/crud-restful.html
@@ -78,7 +78,7 @@
         </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/JavaScript-API-RESTful-Java-EE-MySQL"
+            <a rel="noopener" href="https://github.com/narto12345/JavaScript-API-RESTful-Java-EE-MySQL"
                 target="_blank">https://github.com/narto12345/JavaScript-API-RESTful-Java-EE-MySQL</a>
         </p>
         <h3>Ilustraciones:</h3>
