--- a/pages/project-details/crudIn-console.html
+++ b/pages/project-details/crudIn-console.html
@@ -68,7 +68,7 @@
         </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/CrudInConsole?tab=readme-ov-file"
+            <a rel="noopener" href="https://github.com/narto12345/CrudInConsole?tab=readme-ov-file"
                 target="_blank">https://github.com/narto12345/CrudInConsole?tab=readme-ov-file</a>
         </p>
         <h3>Ilustraciones:</h3>
