--- a/pages/project-details/gifs-app.html
+++ b/pages/project-details/gifs-app.html
@@ -37,7 +37,7 @@
         <div class="navigation-barra-button color2"></div>
     </header>
     <main id="main" class="container">
-        <h2>Título</h2>
+        <h2>GifsApp</h2>
         <h3>¿Qué es?</h3>
         <p>
             Esta es una aplicación web que permite buscar y descargar gifs. Todos los datos provienen de la API
@@ -57,7 +57,7 @@
         </p>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/GifsApp" target="_blank">https://github.com/narto12345/GifsApp</a>
+            <a rel="noopener" href="https://github.com/narto12345/GifsApp" target="_blank">https://github.com/narto12345/GifsApp</a>
         </p>
         <h3>Ilustraciones:</h3>
         <div class="ilustraciones">
