--- a/pages/project-details/mi-directorio.html
+++ b/pages/project-details/mi-directorio.html
@@ -84,7 +84,7 @@
         </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/Mi_Directorio"
+            <a rel="noopener" href="https://github.com/narto12345/Mi_Directorio"
                 target="_blank">https://github.com/narto12345/Mi_Directorio</a>
         </p>
         <h3>Ilustraciones:</h3>
