--- a/pages/project-details/sistema-gt.html
+++ b/pages/project-details/sistema-gt.html
@@ -65,7 +65,7 @@
         </ul>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/SistemaGT"
+            <a rel="noopener" href="https://github.com/narto12345/SistemaGT"
                 target="_blank">https://github.com/narto12345/SistemaGT</a>
         </p>
         <h3>Ilustraciones:</h3>
