--- a/pages/project-details/system-project-task.html
+++ b/pages/project-details/system-project-task.html
@@ -61,7 +61,7 @@
         </p>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL"
+            <a rel="noopener" href="https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL"
                 target="_blank">https://github.com/narto12345/SystemProjectTasks-Razor-Pages-MySQL</a>
         </p>
         <h3>Ilustraciones:</h3>
