--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,6 +40,15 @@
         <div class="projects-container">
             <article class="project">
                 <div class="encabezado-img rellenito">
+                    <h2>CountryApp</h2>
+                    <img class="con-center img-round" src="/images/projects/angular-icon.png" alt="logo-angular">
+                </div>
+                <p class="rellenito">Esta es una aplicación web elaborada en Angular 17 que permite consultar países y
+                    visualizar sus detalles.</p>
+                <a href="/pages/project-details/country-app.html" class="rellenito d-block">Ver detalle</a>
+            </article>
+            <article class="project">
+                <div class="encabezado-img rellenito">
                     <h2>NodeJS - API Rest - JWT</h2>
                     <img class="con-center img-round" src="/images/projects/nodeJS.png" alt="logo-nodeJS">
                 </div>
