--- a/pages/project-details/node-api-jwt.html
+++ b/pages/project-details/node-api-jwt.html
@@ -66,7 +66,7 @@
         </p>
         <h3>Código fuente:</h3>
         <p>
-            <a href="https://github.com/narto12345/NodeJS-API_Rest-JWT_Authenticationion"
+            <a rel="noopener" href="https://github.com/narto12345/NodeJS-API_Rest-JWT_Authenticationion"
                 target="_blank">https://github.com/narto12345/NodeJS-API_Rest-JWT_Authenticationion</a>
         </p>
         <h3>Ilustraciones:</h3>
